<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.SignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MarketPlaceLogin.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/log_greeting" />

        <LinearLayout
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_first_name_login"
                style="@style/Widget.MarketPlace.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:background="@drawable/shape_edit_text"
                android:gravity="center"
                android:hint="@string/log_first_name_hint" />

            <EditText
                android:id="@+id/input_password_login"
                style="@style/Widget.MarketPlace.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_edit_text"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login_login"
                style="@style/Widget.MarketPlace.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:text="@string/log_in_button"
                android:textAllCaps="false" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>