<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.SignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".profile.ProfileFragment">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_name" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tools_user_name" />

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="50dp"
                android:text="@string/upload_item"
                android:textAllCaps="false"
                app:icon="@drawable/ic_share"
                app:iconGravity="start" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_credit_card" />

                </FrameLayout>

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:paddingHorizontal="0dp"
                    android:text="@string/trade_store"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_navigate_next"
                    app:iconGravity="end" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_credit_card" />

                </FrameLayout>

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:paddingHorizontal="0dp"
                    android:text="@string/payment_method"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_navigate_next"
                    app:iconGravity="end" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_credit_card" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/balance" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="4dp"
                    android:gravity="end|center"
                    android:paddingEnd="12dp"
                    android:text="@string/tools_balance" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_credit_card" />

                </FrameLayout>

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:paddingHorizontal="0dp"
                    android:text="@string/trade_history"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_navigate_next"
                    app:iconGravity="end" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_refresh" />

                </FrameLayout>

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:paddingHorizontal="0dp"
                    android:text="@string/restore_purchase"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_navigate_next"
                    app:iconGravity="end" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_help" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/help" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    tools:background="@color/silver">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_log_out" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/log_out" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>